--- a/tests/unittests/CMakeLists.txt
+++ b/tests/unittests/CMakeLists.txt
@@ -20,7 +20,7 @@ add_executable(paddingoffset
     test_cal_paddingoffset.cu
 )
 target_link_libraries(
-  paddingoffset PUBLIC
+    paddingoffset PUBLIC
     -lcudart
     -lcudadevrt
     cal_paddingoffset) 
@@ -29,7 +29,7 @@ add_executable(causalmask
     test_casual_mask.cu
 )
 target_link_libraries(
-   causalmask PUBLIC
+    causalmask PUBLIC
     -lcudart
     -lcudadevrt
     build_casual_mask) 
@@ -50,4 +50,31 @@ target_link_libraries(
     biasRope PUBLIC
     -lcudart
     -lcudadevrt
-    qkv_bias_and_rope) 
+    qkv_bias_and_rope)
+
+add_executable(test_concat_kv
+    test_concat_kv.cu
+)
+target_link_libraries(  # Libs for test_qkv_bias_and_rope
+    test_concat_kv PUBLIC
+    -lcudart
+    -lcudadevrt
+    concat_kv)
+
+add_executable(test_repeat_kv
+    test_repeat_kv.cu
+    )
+target_link_libraries(  # Libs for test_qkv_bias_and_rope
+    test_repeat_kv PUBLIC
+    -lcudart
+    -lcudadevrt
+    repeat_kv)
+
+add_executable(test_fused_trans_remv_pad
+    test_fused_trans_remv_pad.cu
+)
+target_link_libraries(  
+    test_fused_trans_remv_pad PUBLIC
+    -lcudart
+    -lcudadevrt
+    fused_transpose_and_remv_pad) 
