--- a/src/kernels/CMakeLists.txt
+++ b/src/kernels/CMakeLists.txt
@@ -19,7 +19,6 @@ set_property(TARGET build_casual_mask PROPERTY POSITION_INDEPENDENT_CODE  ON)
 set_property(TARGET build_casual_mask PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
 
 add_library(cublas_utils STATIC cublas_utils.cc)
-set_property(TARGET cublas_utils PROPERTY CUDA_SEPARABLE_COMPILATION   ON)
 set_property(TARGET cublas_utils PROPERTY POSITION_INDEPENDENT_CODE  ON)
 set_property(TARGET cublas_utils PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
 
@@ -44,6 +43,11 @@ set_property(TARGET repeat_kv PROPERTY CUDA_SEPARABLE_COMPILATION   ON)
 set_property(TARGET repeat_kv PROPERTY POSITION_INDEPENDENT_CODE  ON)
 set_property(TARGET repeat_kv PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
 
+add_library(mask_softmax STATIC attn_softmax_kernel.cu)
+set_property(TARGET mask_softmax PROPERTY CUDA_SEPARABLE_COMPILATION   ON)
+set_property(TARGET mask_softmax PROPERTY POSITION_INDEPENDENT_CODE  ON)
+set_property(TARGET mask_softmax PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
+
 add_library(fused_transpose_and_remv_pad STATIC fused_transpose_and_remv_pad.cu)
 set_property(TARGET fused_transpose_and_remv_pad PROPERTY CUDA_SEPARABLE_COMPILATION   ON)
 set_property(TARGET fused_transpose_and_remv_pad PROPERTY POSITION_INDEPENDENT_CODE  ON)
@@ -59,15 +63,15 @@ set_property(TARGET act_kernel PROPERTY CUDA_SEPARABLE_COMPILATION   ON)
 set_property(TARGET act_kernel PROPERTY POSITION_INDEPENDENT_CODE  ON)
 set_property(TARGET act_kernel PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
 
-add_library(fused_decoder_self_attention STATIC fused_decoder_self_attention.cu)
-set_property(TARGET fused_decoder_self_attention PROPERTY CUDA_SEPARABLE_COMPILATION   ON)
-set_property(TARGET fused_decoder_self_attention PROPERTY POSITION_INDEPENDENT_CODE  ON)
-set_property(TARGET fused_decoder_self_attention PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
-
 add_library(topk STATIC topK.cu)
 set_property(TARGET topk PROPERTY CUDA_SEPARABLE_COMPILATION   ON)
 set_property(TARGET topk PROPERTY POSITION_INDEPENDENT_CODE  ON)
 set_property(TARGET topk PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
+
+add_library(fused_decoder_self_attention STATIC fused_decoder_self_attention.cu)
+set_property(TARGET fused_decoder_self_attention PROPERTY CUDA_SEPARABLE_COMPILATION   ON)
+set_property(TARGET fused_decoder_self_attention PROPERTY POSITION_INDEPENDENT_CODE  ON)
+set_property(TARGET fused_decoder_self_attention PROPERTY CUDA_RESOLVE_DEVICE_SYMBOLS  ON)
 
 add_library(sampling STATIC sampling.cu)
 set_property(TARGET sampling PROPERTY CUDA_SEPARABLE_COMPILATION   ON)
