--- a/tests/unittests/CMakeLists.txt
+++ b/tests/unittests/CMakeLists.txt
@@ -70,6 +70,15 @@ target_link_libraries(  # Libs for test_qkv_bias_and_rope
     -lcudadevrt
     repeat_kv)
 
+add_executable(test_mask_softmax
+    test_mask_softmax.cu
+)
+target_link_libraries(  
+    test_mask_softmax PUBLIC
+    -lcudart
+    -lcudadevrt
+    mask_softmax) 
+
 add_executable(test_fused_trans_remv_pad
     test_fused_trans_remv_pad.cu
 )
