--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,4 +98,4 @@ add_library(llmengine OBJECT
 
 add_subdirectory(src)
 add_subdirectory(tests)
-# add_subdirectory(examples)
+add_subdirectory(examples)
