--- a/examples/cpp/attention/CMakeLists.txt
+++ b/examples/cpp/attention/CMakeLists.txt
@@ -14,4 +14,4 @@ target_link_libraries(CtxAttnExample PUBLIC
 #     -lcudart
 #     -lcudadevrt                             
 #     LlamaselfAttn
-#     linear)
+#     linear_lib)
