--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,4 +2,4 @@ add_subdirectory(weights)
 add_subdirectory(kernels)
 add_subdirectory(layers)
 add_subdirectory(utils)
-# add_subdirectory(models)
+add_subdirectory(models)
