--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,7 +66,10 @@
         "__hash_table": "cpp",
         "__tree": "cpp",
         "__tuple": "cpp",
-        "__split_buffer": "cpp"
+        "__split_buffer": "cpp",
+        "__node_handle": "cpp",
+        "queue": "cpp",
+        "stack": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
