--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ list(APPEND CMAKE_MODULE_PATH ${CUDA_PATH}/lib64)
 find_package(CUDA REQUIRED)
 
 # setting compiler flags
-set(CMAKE_C_FLAGS    "${CMAKE_C_FLAGS}")
+set(CMAKE_C_FLAGS    "${CMAKE_C_FLAGS}")	
 set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS}")
 set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS}  -Xcompiler -Wall")
 
@@ -99,3 +99,6 @@ add_library(llmengine OBJECT
 add_subdirectory(src)
 add_subdirectory(tests)
 add_subdirectory(examples)
+
+add_executable(main user_entry.cpp)
+target_link_libraries(main PUBLIC -lcublas -lcudart -lcudadevrt llmengine)
